Feature: index.html

--- a/index.html
+++ b/index.html
@@ -1,41 +1,147 @@
+<!-- DEVELOPER: Pari Patel, IS117-101, Fall 2019 -->
 <!doctype html>
-<html class="no-js" lang="">
-
+<html lang="en">
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/hero.css">
+  <link rel="stylesheet" href="css/Homepage.css">
+  <link rel="stylesheet" href="css/socials.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/596500d518.js" crossorigin="anonymous"></script>
+  <title>Connor Letko Portfolio</title>
 </head>
-
 <body>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
+<nav>
+  <div class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="https://cjl72.github.io/portfolio/">Connor Letko</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.7.1.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="https://cjl72.github.io/portfolio/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="education.html">Education</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Skills
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="skillsS.html">Skills School</a>
+            <a class="dropdown-item" href="skillsW.html">Skills Work</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Bio
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="preC.html">Pre-College</a>
+            <a class="dropdown-item" href="presentBio.html">Present</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="projects.html">Projects</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Experience
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="work.html">Work Experience</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="references.html">References</a>
+            <a class="dropdown-item" href="resume.html">Full Resume</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<section class="bgimage">
+  <div class="container-fluid d-flex h-100 justify-content-center align-items-center">
+    <div class="jumbotron bg-dark text-center text-white">
+      <h1>Pari Patel</h1>
+      <h3>This is My Portfolio</h3>
+      <hr class="bg-light">
+      <h5>Current Sophomore at NJIT Studying Business and Information Systems</h5>
+    </div>
+  </div>
+</section>
+<div class="container-fluid zhome-all bg-dark align-items-center overflow-auto">
+  <div class="card container-fluid zhome-content h-100 overflow-auto">
+    <div class="container-fluid card zhome-top align-items-center d-flex justify-content-center">
+      <div class="row w-100">
+        <div class="col-lg-4 col-xs-12">
+          <div class="jumbotron align-items-center text-center">
+            <a class="linkcolors" href="work.html"><h3>Experience</h3></a>
+            <hr>
+            <p>Learn more about me</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-xs-12">
+          <div class="jumbotron align-items-center text-center">
+            <a class="linkcolors" href="resume.html"><h3>Full Resume</h3></a>
+            <hr>
+            <p>See my qualifications</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-xs-12">
+          <div class="jumbotron align-items-center text-center">
+            <a class="linkcolors" href="contact.html"><h3>Contact Me</h3></a>
+            <hr>
+            <p>Get in contact with me</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card container-fluid zhome-bot align-items-center d-flex justify-content-center">
+      <h2 class="m-3 homefont">Social Media</h2>
+      <div class="row w-100">
+        <div class="col-lg-3 col-xs-6 align-items-center text-center homefont">
+          <h5>Github</h5>
+          <a class="gitcolor" href="https://github.com/pkp68" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
+        </div>
+        <div class="col-lg-3 col-xs-6 align-items-center text-center homefont">
+          <h5>LinkedIn</h5>
+          <a class="linkcolor" href="https://www.linkedin.com/in/patelpari108" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+        </div>
+        <div class="col-lg-3 col-xs-6 align-items-center text-center homefont">
+          <h5>Instagram</h5>
+          <a class="insta" href="https://www.instagram.com/patelpari108/" target="_blank"><i class="fab fa-instagram fa-3x"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Footer -->
+<footer class="page-footer font-small bg-dark">
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3 card">
+    © Pari Patel 2019
+    <a href="terms.html">Terms of Use</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-
 </html>
