--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <link rel="stylesheet" href="css/socials.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/596500d518.js" crossorigin="anonymous"></script>
-  <title>Connor Letko Portfolio</title>
+  <title>Pari Patel Portfolio</title>
 </head>
 <body>
 <nav>
   <div class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="https://cjl72.github.io/portfolio/">Connor Letko</a>
+    <a class="navbar-brand" href="https://cjl72.github.io/portfolio/">Pari Patel</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
